debbugs (3.0.0~alpha.1) unstable; urgency=medium

  * Use Text::Xslate instead of Text::Template; Text::Xslate is significantly
    faster.
  * Add support for a Done: psuedoheader (closes: #950133)
  * Fix unescaped From (closes: #983847)
  * Actually return message/rfc822 when there is a single message instead
    of mbox (closes: #1009181)

 -- Don Armstrong <don@debian.org>  Fri, 09 Mar 2018 11:17:10 -0800

debbugs (2.6.0) unstable; urgency=medium

  [ Don Armstrong ]
  * Hack around elinks css bug (closes: #593804)
  * affects now appends packages by default (closes: #656371). Thanks to
    Andreas Beckmann and Julien Cristau.
  * Fix spacing in owner block (closes: #670411)
  * Fix double encoding issues (closes: #672432)
  * Fix encoding in cgi
  * Fix installation of templates (closes: #686928). Thanks to Mike
    Gabriel.
  * Only remove list headers if the message appears to have traversed a
    mailing list to get to us. (closes: #690408)
  * Fix lack of archive support in pkgindex.cgi.
  * Output notice to transcript when there is a malformed command.
    (closes: #691573). Thanks to Jonathan Nieder.
  * Fix failure to forcibly merge/merge when found/fixed is not qualified
    (closes: #670456). Thanks to Jonathan Nieder and Bernhard Schmidt.
  * Add libravatar support.
  * Fix double encoding of attachments (closes: #703300)
  * uri_escape e-mails in libravatar (closes: #728034). Thanks to Fabien
    Givors for pointing this out and providing a patch.
  * Fix title of $gBug (closes: #546383). Thanks to Jakub Wilk.
  * Support CVEs surrounded by parenthesis (closes: #662228). Thanks to
    Ari Pollak.
  * Add reply links to individual bug messages with headers (closes:
    #412815). Thanks to martin krafft, Paul Wise, and Julien Valroff.
  * Fix XSS in version.cgi, thanks to Vlad Constantin (Closes: #762967).
  * Add affects to bugreport.cgi package info header (Closes: #609687).
  * Stop URLs at &quot; too. Thanks to Vincent Lefevre (Closes: #766354).